# degu

./: Cargo.toml  README.md
docs/: index.html
src/: emit.rs  lib.rs  main.rs  shape.rs
src/emit/: json_schema.rs  typescript.rs  zod.rs
tests/: cli.rs
